# ISDEC

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: inspect_joblib.py  inspect_processed.py  inspect_result_data.py  inspect_testset.py  inspect_training_set.py  plotting.py
src/: classification.py  create_features.py  dataset.py  features.py  kfold_crossval.py  models.py  nn_models.py  nn_train.py  os_utils.py  plotting.py  preprocess.py  schedule.py  schedule_config.json  schedule_config.py  schedules.json  summarise_results.py
src/tests/: test_features.py
