[project]
name = "isdec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "marimo>=0.23.1",
    "matplotlib>=3.10.8",
    "mne>=1.12.0",
    "scipy>=1.17.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
