[project]
name = "isdec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "joblib>=1.5.3",
    "marimo>=0.23.3",
    "matplotlib>=3.10.8",
    "mne>=1.12.0",
    "mne-icalabel>=0.8.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
