[project]
name = "isdec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.7",
    "h5py>=3.16.0",
    "jax>=0.10.0",
    "joblib>=1.5.3",
    "marimo>=0.23.3",
    "matplotlib>=3.10.8",
    "mne>=1.12.0",
    "mne-icalabel>=0.8.1",
    "optax>=0.2.8",
    "plotly>=6.3.0",
    "pandas>=3.0.3",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
